# libdrmtap

./: .clang-format  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  libdrmtap.map  meson.build  meson_options.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
bindings/rust/: Cargo.toml
bindings/rust/examples/: capture_test.rs
bindings/rust/libdrmtap/: Cargo.toml  README.md
bindings/rust/libdrmtap-sys/: Cargo.toml  README.md  build.rs
bindings/rust/libdrmtap-sys/csrc/: cursor.c  drm_enumerate.c  drm_grab.c  drmtap-helper.c  drmtap.c  drmtap.h  drmtap_internal.h  gpu_amd.c  gpu_egl.c  gpu_generic.c  gpu_nvidia.c  pixel_convert.c  privilege_helper.c  wire.h
bindings/rust/libdrmtap-sys/src/: lib.rs
bindings/rust/libdrmtap/src/: lib.rs
contrib/integrations/: README.md
contrib/integrations/rustdesk/: README.md
contrib/integrations/rustdesk/drm/: capturable.rs  mod.rs  recorder.rs
docs/: AI_DEVELOPMENT.md  README.md
docs/research/: 00_landscape.md  01_wayland_capture_problem.md  02_drm_kms_mechanism.md  03_permissions.md  04_gpu_and_testing.md  05_api_and_architecture.md  06_github_issues_analysis.md  07_potential_adopters.md  08_reframe_egl_analysis.md
examples/: screenshot.c  split_capture.c  stream.c  vnc_server.c
fuzz/: README.md  build.sh  fuzz_convert.c
helper/: drmtap-helper.c
include/: drmtap.h
patches/rustdesk/: Cargo.toml  README.md  drm.rs  linux.rs  mod.rs  postinst  scrap_Cargo.toml  scrap_build.rs  wayland.rs
rustdesk/: README.md
rustdesk/drm/: display.rs  mod.rs  recorder.rs
src/: cursor.c  drm_enumerate.c  drm_grab.c  drmtap.c  drmtap_internal.h  gpu_amd.c  gpu_egl.c  gpu_generic.c  gpu_intel.c  gpu_nvidia.c  pixel_convert.c  privilege_helper.c  wire.h
tests/: lsan.supp  test_capture.c  test_convert.c  test_deswizzle.c  test_enumerate.c  test_formats.c  test_hdr.c  test_helper.c  test_wire.c  udmabuf_util.h
tools/: README.md  check-version.sh  set-version.sh  sync-crate.sh
