[package]
name = "libdrmtap-sys"
version = "0.2.0"
edition = "2021"
authors = ["Mariano Abad <weimaraner@gmail.com>"]
description = "Raw FFI bindings for libdrmtap — DRM/KMS screen capture library for Linux. Includes embedded C sources compiled statically."
license = "MIT"
repository = "https://github.com/fxd0h/libdrmtap"
homepage = "https://github.com/fxd0h/libdrmtap"
documentation = "https://docs.rs/libdrmtap-sys"
readme = "README.md"
keywords = ["drm", "kms", "screen-capture", "linux", "framebuffer"]
categories = ["external-ffi-bindings", "os::linux-apis"]
include = ["src/**", "csrc/**", "build.rs", "Cargo.toml", "README.md", "LICENSE"]

[build-dependencies]
cc = "1"
